[package]
name = "Item_Finder"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
askama = "0.12"
tokio = { version = "1", features = ["full"] }
tiberius = { version = "0.12", features = ["sql-browser-tokio"] }
serde = { version = "1", features = ["derive"] }
serde_urlencoded = "0.7"
tokio-util = "0.7"
futures-util = "0.3"
serde_json = "1.0"
tokio-stream = "0.1"
rust_xlsxwriter = "0.62.0"
webbrowser = "0.8"
